projects/eapli.base/base.core/gen/eapli/base/surveysmanagement/grammar/SurveyParser.java
// Generated from D:/LAPR4_REPO/projects/eapli.base/base.core/src/main/java/eapli/base/surveysmanagement/grammar\Survey.g4 by ANTLR 4.10.1
package eapli.base.surveysmanagement.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SurveyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INPUT_LABEL=1, OBLIGATORINESS=2, CONDITION=3, SCALE_VALUE_HEADER=4, SCALE_VALUE=5, 
		SUCCESS_MESSAGE=6, TIME_UNIT=7, INPUT_ANSWER=8, POSITIVE_NUMERIC=9, ZERO=10, 
		NUMERIC=11, WORD=12, NAME=13, UPPERCASE_WORD=14, DOT=15, DOT_COMMA=16, 
		COMMA=17, NEWLINE=18, WS=19, APOSTROPHE=20, SPECIAL=21, HIFEN=22, SURVEY_CODE=23, 
		TITLE=24, GREETING_MESSAGE=25, OBJECTIVE=26, DURATION_MESSAGE=27, THANK_YOU_MESSAGE=28, 
		QUESTION_TEXT=29, OPTION=30, FREE_TEXT=31;
	public static final int
		RULE_survey = 0, RULE_welcome_Message = 1, RULE_final_Message = 2, RULE_section = 3, 
		RULE_section_ID = 4, RULE_section_Title = 5, RULE_category = 6, RULE_question = 7, 
		RULE_question_ID = 8, RULE_instruction = 9, RULE_why = 10, RULE_extra_Info = 11, 
		RULE_answer = 12, RULE_single_Choice = 13, RULE_single_Choice_With_Input = 14, 
		RULE_multiple_Choice = 15, RULE_multiple_Choice_With_Input = 16, RULE_sorting_Options = 17, 
		RULE_scaling_Options = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"survey", "welcome_Message", "final_Message", "section", "section_ID", 
			"section_Title", "category", "question", "question_ID", "instruction", 
			"why", "extra_Info", "answer", "single_Choice", "single_Choice_With_Input", 
			"multiple_Choice", "multiple_Choice_With_Input", "sorting_Options", "scaling_Options"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Answer:'", null, null, "'Strongly Agree | Agree | Neutral | Disagree | Strongly Disagree'", 
			null, "'You have successfully completed the survey.'", null, null, null, 
			"'0'", null, null, null, null, "'.'", "';'", "','", "'\\n'", null, "'''", 
			null, "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INPUT_LABEL", "OBLIGATORINESS", "CONDITION", "SCALE_VALUE_HEADER", 
			"SCALE_VALUE", "SUCCESS_MESSAGE", "TIME_UNIT", "INPUT_ANSWER", "POSITIVE_NUMERIC", 
			"ZERO", "NUMERIC", "WORD", "NAME", "UPPERCASE_WORD", "DOT", "DOT_COMMA", 
			"COMMA", "NEWLINE", "WS", "APOSTROPHE", "SPECIAL", "HIFEN", "SURVEY_CODE", 
			"TITLE", "GREETING_MESSAGE", "OBJECTIVE", "DURATION_MESSAGE", "THANK_YOU_MESSAGE", 
			"QUESTION_TEXT", "OPTION", "FREE_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Survey.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SurveyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SurveyContext extends ParserRuleContext {
		public TerminalNode SURVEY_CODE() { return getToken(SurveyParser.SURVEY_CODE, 0); }
		public TerminalNode TITLE() { return getToken(SurveyParser.TITLE, 0); }
		public Final_MessageContext final_Message() {
			return getRuleContext(Final_MessageContext.class,0);
		}
		public Welcome_MessageContext welcome_Message() {
			return getRuleContext(Welcome_MessageContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public SurveyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_survey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterSurvey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitSurvey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitSurvey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurveyContext survey() throws RecognitionException {
		SurveyContext _localctx = new SurveyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_survey);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(38);
			match(SURVEY_CODE);
			}
			{
			setState(39);
			match(TITLE);
			}
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GREETING_MESSAGE) {
				{
				setState(40);
				welcome_Message();
				}
			}

			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				section();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==POSITIVE_NUMERIC );
			{
			setState(48);
			final_Message();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Welcome_MessageContext extends ParserRuleContext {
		public TerminalNode GREETING_MESSAGE() { return getToken(SurveyParser.GREETING_MESSAGE, 0); }
		public TerminalNode OBJECTIVE() { return getToken(SurveyParser.OBJECTIVE, 0); }
		public TerminalNode DURATION_MESSAGE() { return getToken(SurveyParser.DURATION_MESSAGE, 0); }
		public TerminalNode THANK_YOU_MESSAGE() { return getToken(SurveyParser.THANK_YOU_MESSAGE, 0); }
		public Welcome_MessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welcome_Message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterWelcome_Message(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitWelcome_Message(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitWelcome_Message(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Welcome_MessageContext welcome_Message() throws RecognitionException {
		Welcome_MessageContext _localctx = new Welcome_MessageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_welcome_Message);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(GREETING_MESSAGE);
			setState(51);
			match(OBJECTIVE);
			setState(52);
			match(DURATION_MESSAGE);
			setState(53);
			match(THANK_YOU_MESSAGE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Final_MessageContext extends ParserRuleContext {
		public TerminalNode SUCCESS_MESSAGE() { return getToken(SurveyParser.SUCCESS_MESSAGE, 0); }
		public TerminalNode THANK_YOU_MESSAGE() { return getToken(SurveyParser.THANK_YOU_MESSAGE, 0); }
		public TerminalNode EOF() { return getToken(SurveyParser.EOF, 0); }
		public Final_MessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_final_Message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterFinal_Message(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitFinal_Message(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitFinal_Message(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Final_MessageContext final_Message() throws RecognitionException {
		Final_MessageContext _localctx = new Final_MessageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_final_Message);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(SUCCESS_MESSAGE);
			setState(56);
			match(THANK_YOU_MESSAGE);
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public Section_IDContext section_ID() {
			return getRuleContext(Section_IDContext.class,0);
		}
		public Section_TitleContext section_Title() {
			return getRuleContext(Section_TitleContext.class,0);
		}
		public TerminalNode OBLIGATORINESS() { return getToken(SurveyParser.OBLIGATORINESS, 0); }
		public TerminalNode OBJECTIVE() { return getToken(SurveyParser.OBJECTIVE, 0); }
		public TerminalNode CONDITION() { return getToken(SurveyParser.CONDITION, 0); }
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(59);
			section_ID();
			}
			{
			setState(60);
			section_Title();
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBJECTIVE) {
				{
				setState(61);
				match(OBJECTIVE);
				}
			}

			{
			setState(64);
			match(OBLIGATORINESS);
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONDITION) {
				{
				setState(65);
				match(CONDITION);
				}
			}

			{
			setState(69); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(68);
					question();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Section_IDContext extends ParserRuleContext {
		public TerminalNode POSITIVE_NUMERIC() { return getToken(SurveyParser.POSITIVE_NUMERIC, 0); }
		public Section_IDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section_ID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterSection_ID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitSection_ID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitSection_ID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Section_IDContext section_ID() throws RecognitionException {
		Section_IDContext _localctx = new Section_IDContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_section_ID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(POSITIVE_NUMERIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Section_TitleContext extends ParserRuleContext {
		public CategoryContext category() {
			return getRuleContext(CategoryContext.class,0);
		}
		public Section_TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section_Title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterSection_Title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitSection_Title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitSection_Title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Section_TitleContext section_Title() throws RecognitionException {
		Section_TitleContext _localctx = new Section_TitleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_section_Title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			category();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CategoryContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SurveyParser.NAME, 0); }
		public TerminalNode FREE_TEXT() { return getToken(SurveyParser.FREE_TEXT, 0); }
		public CategoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_category; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterCategory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitCategory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitCategory(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CategoryContext category() throws RecognitionException {
		CategoryContext _localctx = new CategoryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_category);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !(_la==NAME || _la==FREE_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionContext extends ParserRuleContext {
		public Question_IDContext question_ID() {
			return getRuleContext(Question_IDContext.class,0);
		}
		public TerminalNode QUESTION_TEXT() { return getToken(SurveyParser.QUESTION_TEXT, 0); }
		public TerminalNode OBLIGATORINESS() { return getToken(SurveyParser.OBLIGATORINESS, 0); }
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode SCALE_VALUE_HEADER() { return getToken(SurveyParser.SCALE_VALUE_HEADER, 0); }
		public List<TerminalNode> OPTION() { return getTokens(SurveyParser.OPTION); }
		public TerminalNode OPTION(int i) {
			return getToken(SurveyParser.OPTION, i);
		}
		public WhyContext why() {
			return getRuleContext(WhyContext.class,0);
		}
		public TerminalNode CONDITION() { return getToken(SurveyParser.CONDITION, 0); }
		public Extra_InfoContext extra_Info() {
			return getRuleContext(Extra_InfoContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(79);
			question_ID();
			}
			{
			setState(80);
			match(QUESTION_TEXT);
			}
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FREE_TEXT) {
				{
				setState(81);
				instruction();
				}
			}

			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCALE_VALUE_HEADER) {
				{
				setState(84);
				match(SCALE_VALUE_HEADER);
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPTION) {
				{
				{
				setState(87);
				match(OPTION);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION_TEXT) {
				{
				setState(93);
				why();
				}
			}

			{
			setState(96);
			match(OBLIGATORINESS);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONDITION) {
				{
				setState(97);
				match(CONDITION);
				}
			}

			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FREE_TEXT) {
				{
				setState(100);
				extra_Info();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Question_IDContext extends ParserRuleContext {
		public TerminalNode POSITIVE_NUMERIC() { return getToken(SurveyParser.POSITIVE_NUMERIC, 0); }
		public Question_IDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_ID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterQuestion_ID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitQuestion_ID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitQuestion_ID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_IDContext question_ID() throws RecognitionException {
		Question_IDContext _localctx = new Question_IDContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_question_ID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(POSITIVE_NUMERIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public TerminalNode FREE_TEXT() { return getToken(SurveyParser.FREE_TEXT, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(FREE_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhyContext extends ParserRuleContext {
		public TerminalNode QUESTION_TEXT() { return getToken(SurveyParser.QUESTION_TEXT, 0); }
		public WhyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_why; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterWhy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitWhy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitWhy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhyContext why() throws RecognitionException {
		WhyContext _localctx = new WhyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_why);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(QUESTION_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Extra_InfoContext extends ParserRuleContext {
		public TerminalNode FREE_TEXT() { return getToken(SurveyParser.FREE_TEXT, 0); }
		public Extra_InfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extra_Info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterExtra_Info(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitExtra_Info(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitExtra_Info(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Extra_InfoContext extra_Info() throws RecognitionException {
		Extra_InfoContext _localctx = new Extra_InfoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_extra_Info);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(FREE_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerContext extends ParserRuleContext {
		public TerminalNode FREE_TEXT() { return getToken(SurveyParser.FREE_TEXT, 0); }
		public TerminalNode ZERO() { return getToken(SurveyParser.ZERO, 0); }
		public Single_ChoiceContext single_Choice() {
			return getRuleContext(Single_ChoiceContext.class,0);
		}
		public Single_Choice_With_InputContext single_Choice_With_Input() {
			return getRuleContext(Single_Choice_With_InputContext.class,0);
		}
		public Multiple_ChoiceContext multiple_Choice() {
			return getRuleContext(Multiple_ChoiceContext.class,0);
		}
		public Multiple_Choice_With_InputContext multiple_Choice_With_Input() {
			return getRuleContext(Multiple_Choice_With_InputContext.class,0);
		}
		public Sorting_OptionsContext sorting_Options() {
			return getRuleContext(Sorting_OptionsContext.class,0);
		}
		public Scaling_OptionsContext scaling_Options() {
			return getRuleContext(Scaling_OptionsContext.class,0);
		}
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).enterAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyListener ) ((SurveyListener)listener).exitAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyVisitor ) return ((SurveyVisitor<? extends T>)visitor).visitAnswer(this);
			else return visitor.visitChildren(this);
		}
	}
